--- a/css/style.css
+++ b/css/style.css
@@ -1,14 +1,19 @@
+/* Regole generali */
 *{
     margin: 0;
     padding: 0;
 }
-header{
-    background-color:blueviolet ;
-    background-image: image(../);
+/* Regole header */
+header {
+    background-color: #4da1ff;
+    height: 100px;
+    background-image: url(../img/pattern.png);
+    background-size: 400px;
+    background-position-x: 70px;
 }
-#logo{
-    width:150px
-}
-#pattern{
-    
+/* Regole logo */
+#logo {
+    padding-top: 40px;
+    padding-left: 5px;
+    width: 190px;
 }
