--- a/css/style.css
+++ b/css/style.css
@@ -49,19 +49,24 @@ section h1 , #dati-scrittore{
 section #articolo , ul {
     padding-top: 30px;
 }
- .row {
-    display: inline-block;
+table{
+    border-spacing: 0px;
+    margin-top: 30px;
 }
-.blue{
-    font-weight: bold;
+thead {
+    border: 0px;
+    background-color: #4da1ff;
     color: white;
 }
-
-
-.thead{
-    background-color: #1aaae6;
+tr:nth-child(odd){
+    background-color: #4da0ff88;
 }
-    
+td:last-child{
+    width: 50%;
+}
+td{
+    text-align: center;
+}
   
   
    
